# Agentic_BNY_AI_Compliance

./: .env.example  .gitignore  README.md  examples.py  json_to_csv.py  main.py  pyproject.toml  readme.md  requirements-backend.txt  requirements.txt  schemas.py
.claude/: settings.local.json
.streamlit/: secrets.toml.example
Agent 1  - Router Agent/: .env.example  README.md
Agent 1  - Router Agent/router_agent/: agent.py  app.py  schema_validator.py  supabase_rest.py
Agent 1  - Router Agent/streamlit_app/: __init__.py
archive/Agent 1  - Router Agent/: requirements-router.txt  requirements.txt
archive/narrative_agent/: narrative_reference.py
archive/tests/: test_agent.py  test_schemas.py
archive/utils/: ctr_rules_engine.py  scoring.py
backend/: __init__.py
backend/agents/: aggregator_agent.py  filer_agent.py  narrative_agent.py  researcher_agent.py  router_agent.py  validator_agent.py
backend/api/: main.py  (+2 more)
data/: CASE-2024-677021.json  CASE-2025-380469.json  CASE-2025-425659.json  README.md  combined_sars.json  ctr_test_case.json  sanctions_transactions.json
docker/: Dockerfile  docker-compose.yml
docs/: NARRATIVE_VALIDATION.md  OFAC_REJECT.md
examples/: input_example.json  input_example2.json  input_example3.json  ofac_reject1.json  ofac_reject2.json  ofac_reject_example.json  pdf_filler_sample_payload.json  sar1.json  sar_agg.json  sar_input3.json
narrative_agent/: __init__.py  agent.py  knowledge_base.py
notebooks/: sar_narrative_demo.ipynb
scripts/: ingest_regulation_json.py  init_weaviate.py  preflight.py  seed_kb.py  test_crew.py  test_ctr_filer.py  test_pdf_filer.py  test_pdf_filler_agent.py
streamlit_app/: app.py
tests/: __init__.py  test_knowledge_base.py  test_ofac_reject.py
utils/: llm_evaluator.py  sar_rules_engine.py
(+117 files in other folders)
